# gthreads

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  Makefile  README.md
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml
benchmarks/: bench_context_switch.c  bench_mutex.c  bench_semaphore.c  bench_thread_create.c
docs/architecture/: ARCHITECTURE.md
docs/testing/: TDD-MATRIX.md
examples/: basic_threads.c  sync_demo.c  trace_replay.c
include/gthreads/: gthreads.h
scripts/: install-hooks.sh
src/context/: context.c  ctx.h  ctx_x86_64.S  stack.c
src/internal/: runtime_state.h
src/runtime/: runtime.c
src/sched/: scheduler.c
src/sync/: cond.c  mutex.c  sem.c  wait_queue.h
src/thread/: thread.c
src/trace/: fuzz.c  replay.c  trace.c  trace_buffer.c  trace_format.h
tests/: test_api_validation.c  test_context.c  test_main.c  test_runtime.c  test_support.h  test_sync_cond.c  test_sync_mutex.c  test_sync_sem.c  test_trace_replay.c
